--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ os: linux
 # ignored on non-linux platforms, but bionic is required for nested virtualization
 dist: bionic
 
+git:
+  depth: false
+
 cache:
   directories:
     - node_modules
@@ -116,6 +119,12 @@ jobs:
       language: objective-c
       os: osx
       osx_image: xcode11.6
+      cache:
+        bundler: true
+        cocoapods: true
+        yarn: true
+        directories:
+          - example/node_modules
       before_install:
         - nvm install 10
         - node --version
