--- a/.travis.yml
+++ b/.travis.yml
@@ -133,6 +133,7 @@ jobs:
         - yarn -version
         - cd example
         - yarn
+        - cd ios && pod install --repo-update && cd ..
         - softwareupdate --list
         - softwareupdate --install "Command Line Tools (macOS High Sierra version 10.13) for Xcode-10.1"
         - brew tap wix/brew
