--- a/.travis.yml
+++ b/.travis.yml
@@ -127,7 +127,7 @@ jobs:
           - example/node_modules
       podfile: example/ios/Podfile
       before_install:
-        - nvm install 10
+        - nvm use 10
         - node --version
         - npm install -g yarn
         - yarn -version
